@@ -11,6 +11,11 @@
   <groupId>org.sakaiproject</groupId>
   <artifactId>sdata-base</artifactId>
   <packaging>pom</packaging>
+  <organization>
+    <name>CARET University of Cambridge</name>
+    <url>http://www2.caret.cam.ac.uk/</url>
+  </organization>
+
   <issueManagement>
      <system>jira</system>
      <url>http://bugs.sakaiproject.org/jira/browse/SAK</url>
@@ -24,7 +29,7 @@
         </notifier>
      </notifiers>
   </ciManagement>
-  <inceptionYear>2003</inceptionYear>
+  <inceptionYear>2008</inceptionYear>
   <!-- Mailing Lists ======================================================= -->
 
     <mailingLists>
@@ -57,13 +62,124 @@
         </license>
     </licenses>
    <scm>
-     <connection>scm:svn:https://source.sakaiproject.org/svn/jcr/trunk/</connection>
-     <developerConnection>scm:svn:https://source.sakaiproject.org/svn/jccr/trunk/</developerConnection>
-     <url>https://source.sakaiproject.org/svn/jcr/trunk/</url>
+     <connection>scm:svn:https://source.sakaiproject.org/contrib/tfd/trunk/sdata/</connection>
+     <developerConnection>scm:svn:https://source.sakaiproject.org/contrib/tfd/trunk/sdata/</developerConnection>
+     <url>https://source.sakaiproject.org/contrib/tfd/trunk/sdata/</url>
    </scm> 
+
+  <distributionManagement>
+    <repository>
+      <uniqueVersion>false</uniqueVersion>
+      <id>local</id>
+      <name>Local Test</name>
+      <url>file:///tmp/maven2</url>
+      <layout>default</layout>
+    </repository>
+    <site>
+      <id>local</id>
+      <name>Local Test</name>
+      <url>file:///tmp/site</url>
+    </site>
+  </distributionManagement>
   
   <modules>
     <module>sdata-tool</module>
     <module>commons-fileupload-1.2-sdata</module>
   </modules>
+
+
+
+
+   <reporting>
+      <plugins>
+         <plugin>
+            <!-- javadocs -->
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <configuration>
+               <debug>true</debug>
+               <links>
+                  <link>http://java.sun.com/j2se/1.5.0/docs/api/</link>
+               </links> 
+               <breakiterator>true</breakiterator>
+               <verbose>false</verbose>
+               <aggregate>true</aggregate>
+               <maxmemory>512m</maxmemory>
+               <additionalJOption>-J-Xms168m -J-Xmx512m -J-XX:PermSize=128m -J-XX:NewSize=64m</additionalJOption>
+               <version>2.3</version>
+            </configuration>
+         </plugin>
+         <plugin>
+            <!-- junit test reports -->
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+         </plugin>
+         <plugin>
+            <!-- unit test coverage reporting -->
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>cobertura-maven-plugin</artifactId>
+            <version>2.0</version>
+         </plugin>
+         <plugin>
+            <!-- Code analysis report -->
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-pmd-plugin</artifactId>
+            <configuration>
+               <targetJdk>1.5</targetJdk>
+               <rulesets>
+                  <ruleset>/rulesets/basic.xml</ruleset>
+                  <ruleset>/rulesets/codesize.xml</ruleset>
+                  <ruleset>/rulesets/design.xml</ruleset>
+                  <ruleset>/rulesets/finalizers.xml</ruleset>
+                  <ruleset>/rulesets/imports.xml</ruleset>
+                  <ruleset>/rulesets/logging-java.xml</ruleset>
+                  <ruleset>/rulesets/migrating.xml</ruleset>
+                  <ruleset>/rulesets/strings.xml</ruleset>
+                  <ruleset>/rulesets/unusedcode.xml</ruleset>
+               </rulesets>
+             <!--  <format>xml</format> -->
+               <linkXref>true</linkXref>
+               <sourceEncoding>utf-8</sourceEncoding>
+               <minimumTokens>100</minimumTokens>
+            </configuration>
+         </plugin>
+<!--
+         <plugin>
+            <! - - Changelog report - - >
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-changelog-plugin</artifactId>
+            <configuration>
+               <type>range</type>
+               <range>90</range><! - - days - - >
+            </configuration>
+         </plugin>
+-->
+         <plugin>
+            <!-- TODO tags report -->
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>taglist-maven-plugin</artifactId>
+            <configuration>
+               <tags>
+                  <tag>TODO</tag>
+                  <tag>FIXME</tag>
+                  <tag>@deprecated</tag>
+               </tags>
+            </configuration>
+         </plugin>
+         <plugin>
+            <!-- jdepend code analysis -->
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>jdepend-maven-plugin</artifactId>
+         </plugin>
+         <plugin>
+            <!-- jxr source code cross linking -->
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jxr-plugin</artifactId>
+            <configuration>
+               <linkJavadoc>true</linkJavadoc>
+               <javadocDir>apidocs</javadocDir>
+            </configuration>
+         </plugin>
+      </plugins>
+   </reporting>
 </project>
